# film-finder-mcp

./: README.md  omdb_client.py  pyproject.toml  server.py  tmdb_client.py
src/: server.py
src/tools/: base_config.py  omdb_client.py  tmdb_client.py
