[project]
name = "film-finder-mcp"
version = "0.1.0"
description = "MCP server for discovering and comparing movies from TMDB and OMDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.0.1",
    "fastmcp>=3.0.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "ruff>=0.15.4",
]
